--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 *.jnilib
 *.so
 *.dll
+*.so.10
+*.so.2.6
 
 # build artefact directories:
 prism/bin/
@@ -28,6 +30,7 @@ prism/lib/ppl_java.jar
 prism/lib/com.microsoft.z3.jar
 prism/lib/prism.jar
 prism/lib/prism-sources.jar
+prism/lib/yices.jar
 
 # generated CUDD headers:
 cudd/include/*.h
